fix code overflow breaking the sidebar

--- a/blog/static/blog/site.css
+++ b/blog/static/blog/site.css
@@ -117,6 +117,7 @@ body {
 }
 
 .main_container {
+  overflow: auto;
 }
 
 .blog_article {
